# abuse-rs

./: Cargo.toml  PLAN.md  README.md  clippy.toml  opencode.json
.opencode/: AGENTS.md
crates/data/: Cargo.toml
crates/data/src/: level.rs  lib.rs  lisp.rs
crates/game/: Cargo.toml
crates/game/src/: main.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/runtime/src/data/: level.rs  lisp.rs  mod.rs  spe.rs
crates/runtime/src/viewer/: assets.rs  audio.rs  camera.rs  constants.rs  hud.rs  mod.rs  object_render.rs  scene.rs
crates/runtime/tests/: level_baselines.rs  spe_fixtures.rs
crates/sim/: Cargo.toml
crates/sim/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: main.rs
docs/decisions/: 0001-architecture.md  0002-runtime-viewer-modules.md
tests/baselines/: README.md
tests/baselines/levels/: frabs00.json  frabs01.json  frabs02.json  frabs03.json  frabs04.json  frabs05.json  frabs06.json  frabs07.json  frabs08.json  frabs09.json  frabs10.json  frabs11.json  frabs12.json  frabs13.json  frabs14.json  frabs15.json  frabs17.json  frabs18.json  frabs19.json  frabs20.json  frabs21.json  frabs30.json  frabs70.json  frabs71.json  frabs72.json  frabs73.json  frabs74.json  level00.json  level01.json  level02.json  level03.json  level04.json  level05.json  level06.json  level07.json  level08.json  level09.json  level10.json  level11.json  level12.json  (+9 more)
