[package]
name = "abuse-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bevy.workspace = true
thiserror.workspace = true
winnow.workspace = true
byteorder.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
